# django-snacks

./: README.MD  pyproject.toml
snacks_project/: db.sqlite3
snacks_project/snacks/: models.py  tests.py  urls.py  views.py
snacks_project/snacks_project/: settings.py  urls.py
snacks_project/templates/: base.html  home.html
